crates/akari_cpp_ext/src/binding_nrc.rs

/* automatically generated by rust-bindgen 0.71.1 */

#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals)]
pub mod root {
    #[allow(unused_imports)]
    use self::super::root;
    pub mod std {
        #[allow(unused_imports)]
        use self::super::super::root;
    }
    pub mod __gnu_cxx {
        #[allow(unused_imports)]
        use self::super::super::root;
    }
    pub mod nn {
        #[allow(unused_imports)]
        use self::super::super::root;
        #[repr(C)]
        #[derive(Debug, Copy, Clone)]
        pub struct NRC {
            _unused: [u8; 0],
        }
        unsafe extern "C" {
            pub fn akr_create_nrc(
                input_cuda_buffer: bool,
                input_dim: u32,
                output_dim: u32,
                batch_size: u32,
                config: *const ::std::os::raw::c_char,
            ) -> *mut root::nn::NRC;
        }
        unsafe extern "C" {
            pub fn akr_nrc_train_inference(
                nrc: *mut root::nn::NRC,
                count: u64,
                input: *const f32,
                output: *mut f32,
            );
        }
        unsafe extern "C" {
            pub fn akr_nrc_set_learning_rate(nrc: *mut root::nn::NRC, learning_rate: f32);
        }
        unsafe extern "C" {
            pub fn akr_nrc_get_learning_rate(nrc: *mut root::nn::NRC) -> f32;
        }
        unsafe extern "C" {
            pub fn akr_nrc_param_count(nrc: *mut root::nn::NRC) -> u64;
        }
        unsafe extern "C" {
            pub fn akr_nrc_save_params(nrc: *mut root::nn::NRC, params: *mut f32);
        }
        unsafe extern "C" {
            pub fn akr_nrc_load_params(nrc: *mut root::nn::NRC, params: *const f32);
        }
        unsafe extern "C" {
            pub fn akr_nrc_inference(
                nrc: *mut root::nn::NRC,
                count: u64,
                input: *const f32,
                output: *mut f32,
            );
        }
        unsafe extern "C" {
            pub fn akr_nrc_train(
                nrc: *mut root::nn::NRC,
                count: u64,
                n_iters: u64,
                input: *const f32,
                target: *const f32,
            ) -> f32;
        }
        unsafe extern "C" {
            pub fn akr_destroy_nrc(nrc: *mut root::nn::NRC);
        }
        unsafe extern "C" {
            pub fn akr_nrc_reset_optimizer(nrc: *mut root::nn::NRC);
        }
    }
}
